--- a/1.format_data/format_training_data.ipynb
+++ b/1.format_data/format_training_data.ipynb
@@ -4527,69 +4527,231 @@
      "text": [
       "(4308, 1292)\n"
      ]
-    }
-   ],
-   "source": [
-    "print(training_data.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Mitocheck_Phenotypic_Class  Mitocheck_Object_ID Location_Center_X  \\\n",
-      "0                      ADCCM                 13.0        262.777778   \n",
-      "1                      ADCCM                 13.0        239.517241   \n",
-      "2                      ADCCM                 13.0        252.980392   \n",
-      "3                      ADCCM                 13.0        258.288462   \n",
-      "4                     Shape3                 10.0       1212.640449   \n",
-      "\n",
-      "  Location_Center_Y Metadata_Plate Metadata_Well Metadata_Site  \\\n",
-      "0         20.126984      LT0043_48        166_48             1   \n",
-      "1         28.206897      LT0043_48        166_48             1   \n",
-      "2         35.862745      LT0043_48        166_48             1   \n",
-      "3         46.038462      LT0043_48        166_48             1   \n",
-      "4         21.314607      LT0043_48        166_55             1   \n",
-      "\n",
-      "  Metadata_Plate_Map_Name                           Metadata_DNA  \\\n",
-      "0        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
-      "1        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
-      "2        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
-      "3        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
-      "4        LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
-      "\n",
-      "  Metadata_Gene  ... efficientnet_1270 efficientnet_1271 efficientnet_1272  \\\n",
-      "0          OGG1  ...          0.207932         -0.736547          0.010863   \n",
-      "1          OGG1  ...           0.38972         -0.562691         -0.044208   \n",
-      "2          OGG1  ...         -0.154282         -0.519065          0.584269   \n",
-      "3          OGG1  ...         -0.298543         -0.587031          0.838506   \n",
-      "4          OGG1  ...          1.764085         -0.364659         -0.623983   \n",
-      "\n",
-      "  efficientnet_1273 efficientnet_1274 efficientnet_1275 efficientnet_1276  \\\n",
-      "0          0.290715         -0.508518         -0.666912          0.527043   \n",
-      "1         -0.159093         -0.605761         -0.605434            0.3765   \n",
-      "2          0.860831         -0.446671         -0.409693          0.383752   \n",
-      "3           1.16317         -0.083327          -0.20665          0.253444   \n",
-      "4          0.087524         -0.678471          -1.04743            0.1197   \n",
-      "\n",
-      "  efficientnet_1277 efficientnet_1278 efficientnet_1279  \n",
-      "0         -0.216474          0.659347         -0.692728  \n",
-      "1         -0.496571          0.028506         -0.152331  \n",
-      "2         -0.343047         -0.370232          0.267983  \n",
-      "3         -0.084782          0.073759         -0.251357  \n",
-      "4          0.254014          0.080685         -0.808582  \n",
-      "\n",
-      "[5 rows x 1292 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mitocheck_Phenotypic_Class</th>\n",
+       "      <th>Mitocheck_Object_ID</th>\n",
+       "      <th>Location_Center_X</th>\n",
+       "      <th>Location_Center_Y</th>\n",
+       "      <th>Metadata_Plate</th>\n",
+       "      <th>Metadata_Well</th>\n",
+       "      <th>Metadata_Site</th>\n",
+       "      <th>Metadata_Plate_Map_Name</th>\n",
+       "      <th>Metadata_DNA</th>\n",
+       "      <th>Metadata_Gene</th>\n",
+       "      <th>...</th>\n",
+       "      <th>efficientnet_1270</th>\n",
+       "      <th>efficientnet_1271</th>\n",
+       "      <th>efficientnet_1272</th>\n",
+       "      <th>efficientnet_1273</th>\n",
+       "      <th>efficientnet_1274</th>\n",
+       "      <th>efficientnet_1275</th>\n",
+       "      <th>efficientnet_1276</th>\n",
+       "      <th>efficientnet_1277</th>\n",
+       "      <th>efficientnet_1278</th>\n",
+       "      <th>efficientnet_1279</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADCCM</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>262.777778</td>\n",
+       "      <td>20.126984</td>\n",
+       "      <td>LT0043_48</td>\n",
+       "      <td>166_48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0043_48_166_48</td>\n",
+       "      <td>LT0043_48/166/48/LT0043_48_166_48.tif</td>\n",
+       "      <td>OGG1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.207932</td>\n",
+       "      <td>-0.736547</td>\n",
+       "      <td>0.010863</td>\n",
+       "      <td>0.290715</td>\n",
+       "      <td>-0.508518</td>\n",
+       "      <td>-0.666912</td>\n",
+       "      <td>0.527043</td>\n",
+       "      <td>-0.216474</td>\n",
+       "      <td>0.659347</td>\n",
+       "      <td>-0.692728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ADCCM</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>239.517241</td>\n",
+       "      <td>28.206897</td>\n",
+       "      <td>LT0043_48</td>\n",
+       "      <td>166_48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0043_48_166_48</td>\n",
+       "      <td>LT0043_48/166/48/LT0043_48_166_48.tif</td>\n",
+       "      <td>OGG1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.38972</td>\n",
+       "      <td>-0.562691</td>\n",
+       "      <td>-0.044208</td>\n",
+       "      <td>-0.159093</td>\n",
+       "      <td>-0.605761</td>\n",
+       "      <td>-0.605434</td>\n",
+       "      <td>0.3765</td>\n",
+       "      <td>-0.496571</td>\n",
+       "      <td>0.028506</td>\n",
+       "      <td>-0.152331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ADCCM</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>252.980392</td>\n",
+       "      <td>35.862745</td>\n",
+       "      <td>LT0043_48</td>\n",
+       "      <td>166_48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0043_48_166_48</td>\n",
+       "      <td>LT0043_48/166/48/LT0043_48_166_48.tif</td>\n",
+       "      <td>OGG1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.154282</td>\n",
+       "      <td>-0.519065</td>\n",
+       "      <td>0.584269</td>\n",
+       "      <td>0.860831</td>\n",
+       "      <td>-0.446671</td>\n",
+       "      <td>-0.409693</td>\n",
+       "      <td>0.383752</td>\n",
+       "      <td>-0.343047</td>\n",
+       "      <td>-0.370232</td>\n",
+       "      <td>0.267983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ADCCM</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>258.288462</td>\n",
+       "      <td>46.038462</td>\n",
+       "      <td>LT0043_48</td>\n",
+       "      <td>166_48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0043_48_166_48</td>\n",
+       "      <td>LT0043_48/166/48/LT0043_48_166_48.tif</td>\n",
+       "      <td>OGG1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.298543</td>\n",
+       "      <td>-0.587031</td>\n",
+       "      <td>0.838506</td>\n",
+       "      <td>1.16317</td>\n",
+       "      <td>-0.083327</td>\n",
+       "      <td>-0.20665</td>\n",
+       "      <td>0.253444</td>\n",
+       "      <td>-0.084782</td>\n",
+       "      <td>0.073759</td>\n",
+       "      <td>-0.251357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shape3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1212.640449</td>\n",
+       "      <td>21.314607</td>\n",
+       "      <td>LT0043_48</td>\n",
+       "      <td>166_55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LT0043_48_166_55</td>\n",
+       "      <td>LT0043_48/166/55/LT0043_48_166_55.tif</td>\n",
+       "      <td>OGG1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.764085</td>\n",
+       "      <td>-0.364659</td>\n",
+       "      <td>-0.623983</td>\n",
+       "      <td>0.087524</td>\n",
+       "      <td>-0.678471</td>\n",
+       "      <td>-1.04743</td>\n",
+       "      <td>0.1197</td>\n",
+       "      <td>0.254014</td>\n",
+       "      <td>0.080685</td>\n",
+       "      <td>-0.808582</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1292 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Mitocheck_Phenotypic_Class  Mitocheck_Object_ID Location_Center_X  \\\n",
+       "0                      ADCCM                 13.0        262.777778   \n",
+       "1                      ADCCM                 13.0        239.517241   \n",
+       "2                      ADCCM                 13.0        252.980392   \n",
+       "3                      ADCCM                 13.0        258.288462   \n",
+       "4                     Shape3                 10.0       1212.640449   \n",
+       "\n",
+       "  Location_Center_Y Metadata_Plate Metadata_Well Metadata_Site  \\\n",
+       "0         20.126984      LT0043_48        166_48             1   \n",
+       "1         28.206897      LT0043_48        166_48             1   \n",
+       "2         35.862745      LT0043_48        166_48             1   \n",
+       "3         46.038462      LT0043_48        166_48             1   \n",
+       "4         21.314607      LT0043_48        166_55             1   \n",
+       "\n",
+       "  Metadata_Plate_Map_Name                           Metadata_DNA  \\\n",
+       "0        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
+       "1        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
+       "2        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
+       "3        LT0043_48_166_48  LT0043_48/166/48/LT0043_48_166_48.tif   \n",
+       "4        LT0043_48_166_55  LT0043_48/166/55/LT0043_48_166_55.tif   \n",
+       "\n",
+       "  Metadata_Gene  ... efficientnet_1270 efficientnet_1271 efficientnet_1272  \\\n",
+       "0          OGG1  ...          0.207932         -0.736547          0.010863   \n",
+       "1          OGG1  ...           0.38972         -0.562691         -0.044208   \n",
+       "2          OGG1  ...         -0.154282         -0.519065          0.584269   \n",
+       "3          OGG1  ...         -0.298543         -0.587031          0.838506   \n",
+       "4          OGG1  ...          1.764085         -0.364659         -0.623983   \n",
+       "\n",
+       "  efficientnet_1273 efficientnet_1274 efficientnet_1275 efficientnet_1276  \\\n",
+       "0          0.290715         -0.508518         -0.666912          0.527043   \n",
+       "1         -0.159093         -0.605761         -0.605434            0.3765   \n",
+       "2          0.860831         -0.446671         -0.409693          0.383752   \n",
+       "3           1.16317         -0.083327          -0.20665          0.253444   \n",
+       "4          0.087524         -0.678471          -1.04743            0.1197   \n",
+       "\n",
+       "  efficientnet_1277 efficientnet_1278 efficientnet_1279  \n",
+       "0         -0.216474          0.659347         -0.692728  \n",
+       "1         -0.496571          0.028506         -0.152331  \n",
+       "2         -0.343047         -0.370232          0.267983  \n",
+       "3         -0.084782          0.073759         -0.251357  \n",
+       "4          0.254014          0.080685         -0.808582  \n",
+       "\n",
+       "[5 rows x 1292 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(training_data.head())"
+    "print(training_data.shape)\n",
+    "training_data.head()"
    ]
   }
  ],
