--- a/2.ML_model/DP_trained_model.ipynb
+++ b/2.ML_model/DP_trained_model.ipynb
@@ -55,15 +55,17 @@
     "    \"\"\"\n",
     "    # read dataset into pandas dataframe\n",
     "    training_data = pd.read_csv(load_path, index_col=0)\n",
-    "    \n",
+    "\n",
     "    # remove training data with ADCCM class as this class was not used for classification in original paper\n",
-    "    training_data = training_data[training_data[\"Mitocheck_Phenotypic_Class\"] != \"ADCCM\"]\n",
+    "    training_data = training_data[\n",
+    "        training_data[\"Mitocheck_Phenotypic_Class\"] != \"ADCCM\"\n",
+    "    ]\n",
     "\n",
     "    # all features from DeepProfiler have \"efficientnet\" in their column name\n",
     "    morphology_features = [\n",
-    "                col for col in training_data.columns.tolist() if \"efficientnet\" in col\n",
-    "            ]\n",
-    "    \n",
+    "        col for col in training_data.columns.tolist() if \"efficientnet\" in col\n",
+    "    ]\n",
+    "\n",
     "    # extract features\n",
     "    X = training_data.loc[:, morphology_features].values\n",
     "\n",
@@ -71,18 +73,20 @@
     "    y = training_data.loc[:, [\"Mitocheck_Phenotypic_Class\"]].values\n",
     "    # make Y data\n",
     "    y = np.ravel(y)\n",
-    "    \n",
-    "    #shuffle data because as it comes from MitoCheck same labels tend to be in grou\n",
+    "\n",
+    "    # shuffle data because as it comes from MitoCheck same labels tend to be in grou\n",
     "    X, y = shuffle(X, y, random_state=0)\n",
-    "    \n",
+    "\n",
     "    return X, y\n",
     "\n",
+    "\n",
     "def average_feature_weights(estimator_list: List):\n",
-    "    \n",
+    "\n",
     "    coefs = []\n",
     "    for estimator in estimator_list:\n",
     "        coefs.append(estimator.coef_)\n",
     "    return np.mean(coefs, axis=0)\n",
+    "\n",
     "\n",
     "def show_weight_distribution():\n",
     "    return"
