--- a/2.ML_model/DP_trained_model.ipynb
+++ b/2.ML_model/DP_trained_model.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### Use training data with DeepProfiler features from [training_data.csv.gz](../1.format_data/data/training_data.csv.gz)\n",
     "\n",
-    "### Import libraries"
+    "### Import libraries\n"
    ]
   },
   {
@@ -21,7 +21,12 @@
     "import numpy as np\n",
     "from typing import Tuple, Any, List, Union\n",
     "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_validate, cross_val_predict, GridSearchCV\n",
+    "from sklearn.model_selection import (\n",
+    "    StratifiedKFold,\n",
+    "    cross_validate,\n",
+    "    cross_val_predict,\n",
+    "    GridSearchCV,\n",
+    ")\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.utils import shuffle\n",
@@ -34,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Helper functions for data loading, training, and validation"
+    "### Helper functions for data loading, training, and validation\n"
    ]
   },
   {
@@ -106,8 +111,7 @@
     "    classes = estimator_list[0].classes_\n",
     "    average_coefs.columns = classes\n",
     "\n",
-    "    return average_coefs\n",
-    "\n"
+    "    return average_coefs"
    ]
   },
   {
@@ -143,7 +147,9 @@
    "outputs": [],
    "source": [
     "# create logistic regression model with following parameters\n",
-    "log_reg_model = LogisticRegression(penalty='elasticnet', solver='saga', max_iter=100, n_jobs=-1, random_state=0)"
+    "log_reg_model = LogisticRegression(\n",
+    "    penalty=\"elasticnet\", solver=\"saga\", max_iter=100, n_jobs=-1, random_state=0\n",
+    ")"
    ]
   },
   {
@@ -1633,10 +1639,12 @@
    ],
    "source": [
     "# hypertune parameters with GridSearchCV\n",
-    "parameters = {\"C\":np.logspace(-3,3,7), \"l1_ratio\":np.linspace(0,1,11)}\n",
-    "#parameters = {\"C\":[1.0], \"l1_ratio\":[0.8]}\n",
+    "parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
+    "# parameters = {\"C\":[1.0], \"l1_ratio\":[0.8]}\n",
     "print(f\"Parameters being tested: {parameters}\")\n",
-    "grid_search_cv = GridSearchCV(log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1)\n",
+    "grid_search_cv = GridSearchCV(\n",
+    "    log_reg_model, parameters, cv=straified_k_folds, n_jobs=-1\n",
+    ")\n",
     "grid_search_cv.fit(X, y)"
    ]
   },
@@ -1665,8 +1673,16 @@
     }
    ],
    "source": [
-    "print(\"Best parameters: \",grid_search_cv.best_params_)\n",
-    "log_reg_model = LogisticRegression(C=grid_search_cv.best_params_[\"C\"], l1_ratio=grid_search_cv.best_params_[\"l1_ratio\"], penalty='elasticnet', solver='saga', max_iter=100, n_jobs=-1, random_state=0)"
+    "print(\"Best parameters: \", grid_search_cv.best_params_)\n",
+    "log_reg_model = LogisticRegression(\n",
+    "    C=grid_search_cv.best_params_[\"C\"],\n",
+    "    l1_ratio=grid_search_cv.best_params_[\"l1_ratio\"],\n",
+    "    penalty=\"elasticnet\",\n",
+    "    solver=\"saga\",\n",
+    "    max_iter=100,\n",
+    "    n_jobs=-1,\n",
+    "    random_state=0,\n",
+    ")"
    ]
   },
   {
@@ -1710,8 +1726,10 @@
    ],
    "source": [
     "# cross validation with logistic regression model across stratified data sets\n",
-    "cv_results = cross_validate(log_reg_model, X, y, cv=straified_k_folds, n_jobs=-1, return_estimator=True)\n",
-    "avg_score = np.mean(cv_results['test_score'])\n",
+    "cv_results = cross_validate(\n",
+    "    log_reg_model, X, y, cv=straified_k_folds, n_jobs=-1, return_estimator=True\n",
+    ")\n",
+    "avg_score = np.mean(cv_results[\"test_score\"])\n",
     "print(f\"Average score: {avg_score}\")"
    ]
   },
@@ -1775,8 +1793,10 @@
     "\n",
     "# display confusion matrix\n",
     "plt.clf()\n",
-    "plt.rcParams['figure.figsize'] = [15, 15]\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=conf_mat, display_labels=grid_search_cv.best_estimator_.classes_)\n",
+    "plt.rcParams[\"figure.figsize\"] = [15, 15]\n",
+    "disp = ConfusionMatrixDisplay(\n",
+    "    confusion_matrix=conf_mat, display_labels=grid_search_cv.best_estimator_.classes_\n",
+    ")\n",
     "disp.plot()\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()"
@@ -1994,8 +2014,8 @@
    ],
    "source": [
     "# display density plot for coefficient values of each class\n",
-    "sns.set(rc = {'figure.figsize':(20,8)})\n",
-    "plt.xlim(-0.02,0.1)\n",
+    "sns.set(rc={\"figure.figsize\": (20, 8)})\n",
+    "plt.xlim(-0.02, 0.1)\n",
     "plt.xlabel(\"Coefficient Value\")\n",
     "plt.ylabel(\"Density\")\n",
     "plt.title(\"Density of Coefficient Values Per Phenotpyic Class\")\n",
