--- a/2.ML_model/DP_model.ipynb
+++ b/2.ML_model/DP_model.ipynb
@@ -69,8 +69,9 @@
     "    # replace shape1 and shape3 labels with their correct respective classes\n",
     "    training_data = training_data.replace(\"Shape1\", \"Binuclear\")\n",
     "    training_data = training_data.replace(\"Shape3\", \"Polylobed\")\n",
-    "    \n",
+    "\n",
     "    return training_data\n",
+    "\n",
     "\n",
     "def get_X_y_data(load_path: pathlib.Path) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
     "    \"\"\"generate X (features) and y (labels) dataframes from training data\n",
@@ -99,38 +100,7 @@
     "    # shuffle data because as it comes from MitoCheck same labels tend to be in grou\n",
     "    X, y = shuffle(X, y, random_state=0)\n",
     "\n",
-    "    return X, y\n",
-    "\n",
-    "\n",
-    "def average_feature_weights(\n",
-    "    estimator_list: List, return_pandas: bool = True\n",
-    ") -> Union[np.ndarray, pd.DataFrame]:\n",
-    "    \"\"\"average coefs from list of estimators\n",
-    "\n",
-    "    Args:\n",
-    "        estimator_list (List): list of estimators from cross_validate()\n",
-    "        return_pandas (bool, optional): whether or not to return pandas dataframe. If false returns numpy array. If true returns labled pandas dataframe. Defaults to True.\n",
-    "\n",
-    "    Returns:\n",
-    "        Union[np.ndarray,pd.DataFrame]: average coefs array or average coefs pandas dataframe\n",
-    "    \"\"\"\n",
-    "\n",
-    "    coefs = []\n",
-    "    for estimator in estimator_list:\n",
-    "        coefs.append(estimator.coef_)\n",
-    "\n",
-    "    average_coefs = np.mean(coefs, axis=0)\n",
-    "    # get abs\n",
-    "    average_coefs = np.abs(average_coefs)\n",
-    "\n",
-    "    if not return_pandas:\n",
-    "        return average_coefs\n",
-    "\n",
-    "    average_coefs = pd.DataFrame(average_coefs).T\n",
-    "    classes = estimator_list[0].classes_\n",
-    "    average_coefs.columns = classes\n",
-    "\n",
-    "    return average_coefs\n"
+    "    return X, y"
    ]
   },
   {
