shuffled baseline clarification

--- a/2.ML_model/DP_model.ipynb
+++ b/2.ML_model/DP_model.ipynb
@@ -2142,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3835,13 +3835,13 @@
     "# save predicitons\n",
     "y_dataframe = pd.DataFrame([y, y_pred]).T\n",
     "y_dataframe.columns = [\"True Phenotypic Class\", \"Predicted Phenotypic Class\"]\n",
-    "y_dataframe.to_csv(f\"{results_dir}/baseline_predictions.tsv\", sep=\"\\t\")\n",
+    "y_dataframe.to_csv(f\"{results_dir}/shuffled_baseline_predictions.tsv\", sep=\"\\t\")\n",
     "\n",
     "# save average precisions\n",
-    "precisions.to_csv(f\"{results_dir}/baseline_precisions.tsv\", sep=\"\\t\")\n",
+    "precisions.to_csv(f\"{results_dir}/shuffled_baseline_precisions.tsv\", sep=\"\\t\")\n",
     "\n",
     "# save final estimator coefficients\n",
-    "coefs.to_csv(f\"{results_dir}/baseline_coefficients.tsv\", sep=\"\\t\")"
+    "coefs.to_csv(f\"{results_dir}/shuffled_baseline_coefficients.tsv\", sep=\"\\t\")"
    ]
   },
   {
