--- a/2.ML_model/split_data.ipynb
+++ b/2.ML_model/split_data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import libraries\n"
+    "# Split feature data\n",
+    "## Create tsv file with indexes for held out data, training data, and testing data\n",
+    "### Import libraries"
    ]
   },
   {
@@ -57,37 +59,6 @@
     "\n",
     "    return training_data\n",
     "\n",
-    "\n",
-    "def get_X_y_data(load_path: pathlib.Path) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
-    "    \"\"\"generate X (features) and y (labels) dataframes from training data\n",
-    "\n",
-    "    Args:\n",
-    "        load_path (pathlib.Path): path to training data csv\n",
-    "\n",
-    "    Returns:\n",
-    "        Tuple[pd.DataFrame, pd.DataFrame]: X, y dataframes\n",
-    "    \"\"\"\n",
-    "    training_data = get_training_data(load_path)\n",
-    "\n",
-    "    # all features from DeepProfiler have \"efficientnet\" in their column name\n",
-    "    morphology_features = [\n",
-    "        col for col in training_data.columns.tolist() if \"efficientnet\" in col\n",
-    "    ]\n",
-    "\n",
-    "    # extract features\n",
-    "    X = training_data.loc[:, morphology_features].values\n",
-    "\n",
-    "    # extract phenotypic class label\n",
-    "    y = training_data.loc[:, [\"Mitocheck_Phenotypic_Class\"]].values\n",
-    "    # make Y data\n",
-    "    y = np.ravel(y)\n",
-    "\n",
-    "    # shuffle data because as it comes from MitoCheck same labels tend to be in grou\n",
-    "    X, y = shuffle(X, y, random_state=0)\n",
-    "\n",
-    "    return X, y\n",
-    "\n",
-    "\n",
     "def get_random_images_indexes(training_data: pd.DataFrame, num_images: int) -> List:\n",
     "    \"\"\"get image indexes from training dataset\n",
     "\n",
@@ -109,6 +80,13 @@
     "        image_indexes_list.extend(image_indexes)\n",
     "\n",
     "    return image_indexes_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data and set holdout/test parameters"
    ]
   },
   {
