--- a/2.ML_model/train_model.ipynb
+++ b/2.ML_model/train_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,10 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import (\n",
     "    StratifiedKFold,\n",
-    "    cross_validate,\n",
-    "    cross_val_predict,\n",
     "    GridSearchCV,\n",
     ")\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, precision_score\n",
     "from sklearn.utils import shuffle\n",
-    "from joblib import dump\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import seaborn as sns"
+    "from joblib import dump"
    ]
   },
   {
@@ -42,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +531,7 @@
        "[3378 rows x 1292 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +540,6 @@
     "# load training data from indexes and features dataframe\n",
     "data_split_path = pathlib.Path(\"results/data_split_indexes.tsv\")\n",
     "features_dataframe_path = pathlib.Path(\"../1.format_data/data/training_data.csv.gz\")\n",
-    "\n",
     "\n",
     "features_dataframe = get_features_data(features_dataframe_path)\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
@@ -557,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2073,16 +2066,7 @@
    ],
    "source": [
     "print(f\"Best parameters: {grid_search_cv.best_params_}\")\n",
-    "print(f\"Score of best estimator: {grid_search_cv.best_score_}\")\n",
-    "log_reg_model = LogisticRegression(\n",
-    "    C=grid_search_cv.best_params_[\"C\"],\n",
-    "    l1_ratio=grid_search_cv.best_params_[\"l1_ratio\"],\n",
-    "    penalty=\"elasticnet\",\n",
-    "    solver=\"saga\",\n",
-    "    max_iter=100,\n",
-    "    n_jobs=-1,\n",
-    "    random_state=0,\n",
-    ")"
+    "print(f\"Score of best estimator: {grid_search_cv.best_score_}\")"
    ]
   },
   {
@@ -2094,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2087,7 @@
        "['results/log_reg_model.joblib']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2154,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2180,40 +2164,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
       "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "/home/roshankern/anaconda3/envs/2.ML_phenotypic_classification/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
@@ -3542,35 +3492,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters: {'C': 0.01, 'l1_ratio': 0.5}\n",
-      "Score of best estimator: 0.3475427106561551\n"
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.3472468526679894\n"
      ]
     }
    ],
    "source": [
     "print(f\"Best parameters: {grid_search_cv.best_params_}\")\n",
-    "print(f\"Score of best estimator: {grid_search_cv.best_score_}\")\n",
-    "log_reg_model = LogisticRegression(\n",
-    "    C=grid_search_cv.best_params_[\"C\"],\n",
-    "    l1_ratio=grid_search_cv.best_params_[\"l1_ratio\"],\n",
-    "    penalty=\"elasticnet\",\n",
-    "    solver=\"saga\",\n",
-    "    max_iter=100,\n",
-    "    n_jobs=-1,\n",
-    "    random_state=0,\n",
-    ")"
+    "print(f\"Score of best estimator: {grid_search_cv.best_score_}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3579,7 +3520,7 @@
        "['results/shuffled_baseline_log_reg_model.joblib']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
