number steps, utils file

--- a/2.ML_model/0.split_data.ipynb
+++ b/2.ML_model/0.split_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,66 +20,9 @@
     "import pathlib\n",
     "from typing import Tuple, Any, List, Union\n",
     "\n",
-    "from sklearn.utils import shuffle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Helper functions\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_training_data(load_path: pathlib.Path) -> pd.DataFrame:\n",
-    "    \"\"\"get DP training data from csv at load path\n",
+    "from sklearn.utils import shuffle\n",
     "\n",
-    "    Args:\n",
-    "        load_path (pathlib.Path): path to training data csv\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: training dataframe\n",
-    "    \"\"\"\n",
-    "    # read dataset into pandas dataframe\n",
-    "    training_data = pd.read_csv(load_path, index_col=0)\n",
-    "\n",
-    "    # remove training data with ADCCM class as this class was not used for classification in original paper\n",
-    "    training_data = training_data[\n",
-    "        training_data[\"Mitocheck_Phenotypic_Class\"] != \"ADCCM\"\n",
-    "    ]\n",
-    "\n",
-    "    # replace shape1 and shape3 labels with their correct respective classes\n",
-    "    training_data = training_data.replace(\"Shape1\", \"Binuclear\")\n",
-    "    training_data = training_data.replace(\"Shape3\", \"Polylobed\")\n",
-    "\n",
-    "    return training_data\n",
-    "\n",
-    "def get_random_images_indexes(training_data: pd.DataFrame, num_images: int) -> List:\n",
-    "    \"\"\"get image indexes from training dataset\n",
-    "\n",
-    "    Args:\n",
-    "        training_data (pd.DataFrame): pandas dataframe of training data\n",
-    "        num_images (int): number of images to holdout\n",
-    "\n",
-    "    Returns:\n",
-    "        List: list of image indexes to with held out images\n",
-    "    \"\"\"\n",
-    "    unique_images = pd.unique(training_data[\"Metadata_Plate_Map_Name\"])\n",
-    "    images = np.random.choice(unique_images, size=num_images, replace=False)\n",
-    "\n",
-    "    image_indexes_list = []\n",
-    "    for image in images:\n",
-    "        image_indexes = training_data.index[\n",
-    "            training_data[\"Metadata_Plate_Map_Name\"] == image\n",
-    "        ].tolist()\n",
-    "        image_indexes_list.extend(image_indexes)\n",
-    "\n",
-    "    return image_indexes_list"
+    "from utils.MlPipelineUtils import get_features_data, get_random_images_indexes"
    ]
   },
   {
@@ -91,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +48,7 @@
    "source": [
     "# load x (features) and y (labels) dataframes\n",
     "load_path = pathlib.Path(\"../1.format_data/data/training_data.csv.gz\")\n",
-    "training_data = get_training_data(load_path)\n",
+    "training_data = get_features_data(load_path)\n",
     "print(training_data.shape)\n",
     "\n",
     "# number of images to holdout\n",
@@ -116,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3973, 1292)\n"
+      "(4027, 1292)\n"
      ]
     }
    ],
@@ -136,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3378, 1292)\n"
+      "(3423, 1292)\n"
      ]
     }
    ],
@@ -160,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,27 +135,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>4186</td>\n",
+       "      <td>674</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>4187</td>\n",
+       "      <td>679</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>4188</td>\n",
+       "      <td>680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>4189</td>\n",
+       "      <td>681</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>holdout</td>\n",
-       "      <td>107</td>\n",
+       "      <td>682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -251,11 +194,11 @@
       ],
       "text/plain": [
        "        label  index\n",
-       "0     holdout   4186\n",
-       "1     holdout   4187\n",
-       "2     holdout   4188\n",
-       "3     holdout   4189\n",
-       "4     holdout    107\n",
+       "0     holdout    674\n",
+       "1     holdout    679\n",
+       "2     holdout    680\n",
+       "3     holdout    681\n",
+       "4     holdout    682\n",
        "...       ...    ...\n",
        "4118    train   4303\n",
        "4119    train   4304\n",
@@ -266,7 +209,7 @@
        "[4123 rows x 2 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +237,7 @@
     "results_dir = pathlib.Path(\"results/\")\n",
     "results_dir.mkdir(parents=True, exist_ok=True)\n",
     "# save indexes as tsv file\n",
-    "index_data.to_csv(f\"{results_dir}/data_split_indexes.tsv\", sep=\"\\t\")"
+    "index_data.to_csv(f\"{results_dir}/0.data_split_indexes.tsv\", sep=\"\\t\")"
    ]
   }
  ],
